# cai

./: .gitignore  Cargo.toml  LICENSE  README.md  history.json  test_script.py  will_error.py
ai_test_dir/: random_quote.py  readme.txt
cai/: Cargo.toml
cai-app/: package-lock.json  package.json  vite.config.js
cai-app/rust-src/: Cargo.toml
cai-app/rust-src/src/: lib.rs  ws_server.rs
cai-app/src/: app.html
cai-app/src-tauri/: Cargo.toml  tauri.conf.json
cai-app/src-tauri/src/: lib.rs  main.rs
cai-app/src/routes/: +page.svelte
cai-cli/: Cargo.toml
cai-cli/src/: lib.rs  text_enhance.rs
cai-core/: Cargo.toml  devil.rs
cai-core/src/: client.rs  client_util.rs  constants.rs  history_manager.rs  levels.rs  lib.rs  memory_manager.rs  models.rs  passive_context.rs  prompt.rs  ui_interface.rs  ui_trait.rs
cai-core/src/parsers/: _python_builtins.py  commands.rs  memory.rs  mod.rs  python.rs  write.rs
cai-core/src/shells/: mod.rs  powershell.rs  util.rs
cai/src/: _main.rs  auto_git_pull.rs  main.rs
pipeline/: Cargo.toml
pipeline/src/: lib.rs  main.rs  prompts.rs
src/: client.rs  client_util.rs  history.rs  history_manager.rs  input_reading.rs  main.rs  memory.rs  memory_manager.rs  prompt.rs  shell.rs  text_macro.rs  types.rs
src/parsers/: commands.rs  voice.rs  write.rs
src/shells/: mod.rs  sh.rs
