
[package]
name    = "cai"
version = "0.1.0"
edition = "2021"

# ─────────────── Features ───────────────
[features]
default = []
voice   = ["rodio", "cpal"]

# ─────────────── Deps ───────────────
[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
regex        = "1"
tokio        = { version = "1", features = ["full"] }
lazy_static  = "1.5.0"
syntect      = { version = "5", features = ["default"] }
walkdir      = "2.5.0"
colored      = "3.0.0"
async-openai = { version = "0.28.1", features = ["byot"] }
once_cell    = "1.21.3"
anyhow       = "1.0.98"

# ― optional audio stack (only compiled when `voice` feature is enabled)
rodio = { version = "0.20.1", optional = true, default-features = false }
cpal  = { version = "0.15",   optional = true, default-features = false }

# ──────────────────────────────────────────────────────────────
# Fix GCC-14 breakage in onig_sys / Oniguruma
# (remove once crates.io publishes a ≥ 69.9 release)
# ──────────────────────────────────────────────────────────────
[patch.crates-io]
onig_sys = { git = "https://github.com/rust-onig/rust-onig", branch = "main" }
