
[workspace]
members = [
    "cai",
    "cai-core",
    "cai-cli",
    "cai-app/src-tauri",
]

# optional shared dependencies across the whole workspace
[workspace.dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
regex        = "1"
tokio        = { version = "1", features = ["full"] }
lazy_static  = "1.5.0"
syntect      = { version = "5", features = ["default"] }
walkdir      = "2.5.0"
colored      = "3.0.0"
async-openai = { version = "0.28.1", features = ["byot"] }
once_cell    = "1.21.3"
anyhow       = "1.0.98"


[workspace.features]
default = ["cli"]
app     = []
cli     = []

[patch.crates-io]
onig_sys = { git = "https://github.com/rust-onig/rust-onig", branch = "main" }
