
[workspace]
resolver = "2"
members = [
    "cai",
    "cai-core",
    "cai-cli",
    "cai-app/rust-src",
]

# optional shared dependencies across the whole workspace
# [workspace.dependencies]
# serde        = { version = "1.0", features = ["derive"] }
# serde_json   = "1.0"
# regex        = "1"
# tokio        = { version = "1", features = ["full"] }
# lazy_static  = "1.5.0"
# async-openai = { version = "0.28.1", features = ["byot"] }
# once_cell    = "1.21.3"
# anyhow       = "1.0.98"


[patch.crates-io]
onig_sys = { git = "https://github.com/rust-onig/rust-onig", branch = "main" }
