[package]
name = "cai_core"
version = "0.1.0"
edition = "2021"
description = "Core library for Cai -- contains shared logic"

[dependencies]
anyhow = "1.0.98"
async-openai = { version = "0.28.1", features = ["byot"] }
colored = "3.0.0"
lazy_static = "1.5.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
