[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"
description = "Pipeline for Cai -- handles the core reasoning and proactivity of the AI agent."

[features]
default = ["cli"]
cli = ["cai_cli"]
app = ["cai_app"]


[dependencies]
cai_core = { path = "../cai-core" }

#  UIs
cai_cli = { path = "../cai-cli", optional = true }
cai_app = { path = "../cai-app/rust-src", optional = true }

#  Other dependencies
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
