[package]
name = "cai_app"
version = "0.1.0"
edition = "2021"
description = "Web Based UI for Cai"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cai_core = { path = "../../cai-core" }
rand = "0.9.1"
tokio            = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", default-features = false, features = ["rustls-tls-webpki-roots"] }
anyhow           = "1"
futures-util     = "0.3"