[package]
name = "cai_app"
version = "0.1.0"
edition = "2021"
description = "Web Based UI for Cai"

[lib]
name = "cai_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cai_core = { path = "../../cai-core" }
tokio = { version = "1.45.0", features = ["full"] }
anyhow = "1.0.98"
rand = "0.9.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
